1.3 beta 7
- Fix shift + mouse wheel horizontal scrolling on windows
- Fixed bug when looping drums
- Support reading files with accents in their name on Windows
- Improve printing by setting appropriate caps to measure bars
- Work around wxGCDC bug to ensure that lines are of the correct thickness when printing
- Fix rare memory leak
- Further tweak fonts on Windows

1.3 beta 6
- Add basic loop feature
- Fix exporting to audio on OSX Lion
- Add option to check online for new versions of Aria
- Add Russian and Portuguese translations from Transifex
- Improve look on Windows
- Save the vertical scroll of each track
- Allow selecting default editor type in preferences
- Further improve magnetic grid
- Add "Duplicate track" feature
- Show a dialog asking user to restart Aria after changing soundfont
- Improvements to track default volume feature
- Improvements to score printing
- Pressing spacebar while recording now stops recording as intended
- Ability to print multiple views for the same track
- Fix bug when undoing shifting frets in guitar editor
- Add keyboard shortcuts for play/pause and record

1.3 beta 5
- Added support for selecting sound bank on OSX
- Fixed MIDI export when some notes have a volume of 0
- Spanish translation (thanks to Othyro)
- Fix double replace confirmation on OSX (Cocoa)
- Remember in saved Aria files whether unused drums were hidden
- Fix minor leak in CoreAudio player
- Use fancy cursor on OSX when pressing Shift to select more
- Fixed score editor bug that caused bogus silences to appear
- Add dotted notes to magnetic grid
- Improve 'pencil' tool with more accuracy
- Improved display of very small notes

1.3 beta 4
- Added ability to drag-duplicate notes
- Fixed accidentals in score editor working over all octaves
- Fixed incorrect ledger lines in score view and score printing
- Move playback timer to the status bar where it is less intrusive
- Fix reverting to default output when custom output port is not found