@@ -6,6 +6,7 @@
 - Work around wxGCDC bug to ensure that lines are of the correct thickness when printing
 - Fix rare memory leak
 - Further tweak fonts on Windows
+- Fix incorrect drumkit label when importing a midi file with manual channel management
 
 1.3 beta 6
 - Add basic loop feature
